# automac

./: .gitignore  CMakeLists.txt  README.md  main.c
.cmake/api/v1/reply/: cache-v2-0ad8684a07e89fac22cc.json  cache-v2-f3b583ecd9f0fb37392e.json  cmakeFiles-v1-86553e48b1b05d6d2da5.json  cmakeFiles-v1-c1ed49403e4e9f7e511a.json  codemodel-v2-22fccf103f6a28f792f7.json  codemodel-v2-e0bab88c45bf063dded1.json  index-2022-10-13T07-02-07-0020.json  index-2022-10-14T08-56-14-0692.json  target-automac-Debug-386819772909736196c0.json  target-automac-Debug-c8d88869f344ca9aea50.json
Inc/: ifman.h  mac.h  minieap.h  ping.h  utils.h
Src/: ifman.c  mac.c  minieap.c  ping.c  t.c  utils.c
include/: ping.h  utils.h
src/: mac.c  ping.c
